# ISEA-ZKP

./: .gitignore  README.md  demo.sh
docs/: architecture_diagram.md  design_document.md
src/circuits/: commitment_check.circom  full_predicate.circom  generate_input.js  input_example.json  input_fail.json  input_income.json  package-lock.json  package.json  prove.sh  range_proof.circom  setup.sh
src/issuer/: Cargo.toml  age_input.json
src/issuer/src/: credential.rs  main.rs  poseidon.rs
src/verifier/: benchmark.js  collusion_demo.js  package-lock.json  package.json  verifier.js
