[package]
name = "crcs-issuer"
version = "0.1.0"
edition = "2021"
description = "CRCS Issuer — Credential generation with additive secret sharing and Poseidon commitments"

[dependencies]
# Arkworks for BN254 field arithmetic
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-std = "0.4"

# Poseidon hash (compatible with circom's Poseidon)
light-poseidon = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Randomness
rand = "0.8"

# HMAC signing
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
